Overview of changes in Ethereal 0.5.1:
* Updated Vines support (Joerg Mayer)
* Bitfield decoding (Guy)
* GTK+ 1.1/1.2 support (Gilbert, Gerald)
* Make TCP info more verbose (Gerald)
* Fix resize problems w/main window (Gerald)

Overview of changes in Ethereal 0.5.0:
* Initial release of wiretap library (Gilbert)
* Sun C compiler fixes (Laurent)
* Enhanced PPP support (Guy)
* OMG CORBA GIOP/IIOP support (Laurent)
* Configurable columns (Gerald)
* Lots of other fixes and enhancements

Overview of changes in Ethereal 0.4.1:
* Copious amount of fixes (Guy)
* Minor fixes to the filter prefs dialog (Gerald)
* About box (Laurent)
* Initial NetBIOS Name Services support (Gilbert, Guy)
* Initial AppleTalk support (Simon Wilkinson)

Overview of changes in Ethereal 0.4.0:

* Lots of fixes from Guy Harris
* Preferences dialog (Gerald)
* OSPF updates (Hannes, Gerald)
* FDDI support (Laurent, Guy)
* Separate display and capture filters (Gerald)

Overview of changes in Ethereal 0.3.17:

* Ethernet manufacturer support (Laurent)
* Netware SAP support (Gilbert)
* Misc Netware/token ring fixes and enhancements (Gilbert)
* PPP fixes (Gerald)
* Null/loopback interface support (Gerald)

Overview of changes in Ethereal 0.3.16:

* Support for ISO/OSI CLNP & COTP (Laurent)
* Support for Banyan Vines (Don)
* TCP reconstruction support (Mike)

Overview of changes in Ethereal 0.3.15:

* OSPF fixes (Hannes)
* Preliminary IPv6 support (Hannes)
* Name resolution (Laurent)
* Font and help option (Laurent)
* Token ring fixes (Gilbert)
* DLT_RAW #define fixes (Laurent, Hannes and a few others)

Overview of changes in Ethereal 0.3.14:

* Added Laurent's fixes to pntoh[sl].
* RIP fixes (Laurent)
* Added Gilbert's BOOTP code.

Overview of changes in Ethereal 0.3.13:

* Made the tree items "sticky"
* Expanded the pntoh[sl] macros, fixed alignment problems with IPX code.
* Changes to packet-ppp and packet-raw

Overview of changes in Ethereal 0.3.12:

* RIP support (Hannes)
* LPR/LPD support (Gilbert)